♻️ refactor: QA 수정 완료
- Converter를 이용한 변환 호출을 Facade 계층으로 옮김
-  SchduleService가 기존 CQRS 서비스 계층을 이용하지않고 직접적으로 엔티티들을 호출하는 문제 해결
- CollectionUtils 활용
- 빌드 테스트 완료

Ref. #S14P11A704-212